Fixed Bugs, need to change date format in db and change seats fragment